@@ -1,4 +1,5 @@
 <settings>
-   <setting id="quality" type="enum" label="30017" lvalues="30019|30018" default="1"/>
+   <setting id="video" type="enum" label="30017" lvalues="30019|30018" default="0"/>
+   <setting id="minimum_duration" type="number" label="30056" default="0"/>
    <setting id="view" type="bool" label="30055" default="true"/>
 </settings>
